--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -1,4 +1,6 @@
 pl:
   hello: "Witaj świecie"
+  closed: "Zamknięte"
+  schedule: "harmonogram"
   date:
     day_names: [Niedziela, Poniedzialek, Wtorek, Sroda, Czwartek, Piatek, Sobota]
