--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,5 +31,7 @@
 
 en:
   hello: "Hello world"
+  closed: 'Closed'
+  schedule: 'Schedule'
   date:
     day_names: [Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday]
